tdf#119286 speed up find/replace

SvxSearchItem is very expensive to construct, so move it outside the
primary loop.
This takes the time from 6s to 3s for me.

Change-Id: Ie6491761e69c4f787910d7ecfbd071b7e68efd35